    - Set all channels/params to invalid severity when there is a communication error
    - Clean up source code formatting; remove unused parameters
    - Use new asynPortDriver constructor which doesn't need the parameter list length
    - Remove functionality to read/write arbitrary memory address.  This is not needed.
    - New coupler db files.  Old versions are retained for compatibility, but new versions
            are cleaner and have more intuitive PV names.

R0.2.1  M. Dunning - 2020-10-06
    - Use asyn R4.39-0.0.1

R0.2.0  Kukhee Kim - 2019-09-26
   - merge R0.1.5-multi_instances into master branch
   - support multiple instances in an ioc
   - build against asyn R4.32-1.0.0   
  

R0.1.5-1.1   Kukhee Kim - 2019-09-26
    - support asyn R4.32-1.0.0

R0.1.5-1.0   Kukhee Kim - 2019-09-25
    - support multiple instances in a a single ioc
    - Please, check up README file to use new driver configuration command 
      (introducing mbus_name identifier to support multiple instances)
    - update example ioc to use new driver configuration command
    - Please, check database template substitution file in the example ioc
      (example for how to use port name for multiple instances)


R0.1.5-multi_instances    Kukhee Kim - 2019-09-23
    - support multiple instances in a single ioc

R0.1.5  M. Dunning - 2019-09-20
    - Build for beatnik
    - Make __getTime() rtems friendly

R0.1.4  M. Dunning - 2019-04-23
    - Round two of reducing flood of cryptic error messages printed by driver.
            Now driver will print an error message every 5 minutes
            and print a helpful message when back to normal.
    - Add bkh*_simple.db files which allow more freedom on PV name structure.
    - Add global error flag

R0.1.3  M. Dunning - 2019-03-19
    - Reduce flood of cryptic error messages printed by driver if a device is disconnected.
            Now we should only see a sensible message periodically.
    - Update ai_convert_autosave.template
