@@ -16,6 +16,8 @@ R0.3.0  M. Dunning - 2021-04-14
     - Clean up source code formatting; remove unused parameters
     - Use new asynPortDriver constructor which doesn't need the parameter list length
     - Remove functionality to read/write arbitrary memory address.  This is not needed.
+    - Redo report() methods so drvMBus info is not printed for each bkh port
+    - Add records for message queue counts and sizes
     - New coupler db files.  Old versions are retained for compatibility, but new versions
             are cleaner and have more intuitive PV names.
 
